tdf#89405 DOC export: fix corrupted comment order

Code for correctly exporting a Writer document with comments to a MS Word 97-2003 .doc format.
Also includes a unit test.

Reviewed on:
	https://gerrit.libreoffice.org/14841

Change-Id: I9f8f4fa466908335d98c43bd7d3e387bfe9baf6a